# logcabin

./: .gitignore  CMakeLists.txt  README.md
Client/: ClientImpl.h  ClientImplTest.cc  ClientTest.cc  LeaderRPC.h  MockClientImplTest.cc  ServerControl.cc  SessionManager.cc  SessionManagerTest.cc
Core/: ProtoBufTest.cc  RollingStat.cc  RollingStatTest.cc
Protocol/Client/: Client.pb.cc  Client.pb.h
Protocol/Raft/: Raft.pb.cc  Raft.pb.h  RaftLogMetadata.pb.cc  RaftLogMetadata.pb.h
Protocol/Server/: ServerControl.pb.cc  ServerControl.pb.h  ServerControl.proto  ServerStats.pb.cc  ServerStats.pb.h
Protocol/Snapshot/: SnapshotMetadata.pb.cc  SnapshotMetadata.pb.h  SnapshotMetadata.proto  SnapshotStateMachine.pb.cc  SnapshotStateMachine.pb.h  SnapshotStateMachine.proto  SnapshotStats.pb.cc  SnapshotStats.pb.h
Protocol/Storage/: SegmentedLog.pb.cc  SegmentedLog.pb.h  SegmentedLog.proto  SimpleFileLog.pb.cc  SimpleFileLog.pb.h  SimpleFileLog.proto
Protocol/Test/: ProtoBufTest.pb.cc  ProtoBufTest.pb.h
Protocol/Tree/: Snapshot.pb.cc  Snapshot.pb.h
RPC/: ClientRPCTest.cc  ServerRPCTest.cc  ServerTest.cc
Server/: ClientService.cc  ClientService.h  ClientServiceTest.cc  ControlService.cc  RaftConsensus.cc  RaftConsensus.h  RaftConsensusTest.cc  RaftService.cc  ServerStats.h  StateMachine.h  StateMachineTest.cc
Storage/: Log.cc  Log.h  MemoryLog.cc  SegmentedLog.cc  SegmentedLog.h  SimpleFileLog.cc  SimpleFileLog.h  SnapshotFileTest.cc  Tool.cc
Tree/: ProtoBuf.h  Tree.cc
